--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,13 +9,13 @@
 <script src="/static/fontawesome-free-5.15.3-web/js/all.js"></script>
 <script src="/static/fontawesome-free-5.15.3-web/attribution.js"></script>
 
-<script src="/static/js/app.js"></script>
+<script src="{{ url_for('static', filename='js/app.js') }}"></script>
 
 
 
-<link rel=stylesheet type=text/css href="/static/bootstrap-5.0.1-dist/css/bootstrap.css">
-<link rel=stylesheet type=text/css href="/static/fontawesome-free-5.15.3-web/css/all.css">
-<link rel=stylesheet type=text/css href="/static/css/app.css">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='bootstrap-5.0.1-dist/css/bootstrap.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='fontawesome-free-5.15.3-web/css/all.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/app.css') }}">
 
 {% block script %}
 {% endblock %}
